--- a/PlanATech/appsettings.json
+++ b/PlanATech/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=PlanATech;Username=postgres;Password=postgres;Port=5433"
+  }
 }
