--- a/PlanATech/appsettings.json
+++ b/PlanATech/appsettings.json
@@ -10,5 +10,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=PlanATech;Username=postgres;Password=postgres;Port=5433"
   },
-  "JWTkey": "1234567890123456"
+  "JWTkey": "1234567890123456",
+  "UploadFilesService": "http://localhost:9286/api/"
 }
